tests/NormalTests/paczka2/big_fuzzy/87026173.err
Error in line 4: GWsyKf6 A367 8,0
Error in line 15: S522 S522 37,4
Error in line 8: GWsyKf6 S522 64,4
Error in line 21: GWsyKf6 S997 17*,7
Error in line 19: GWsyKf6 S997 82,5
Error in line 25: GWsyKf6 A868 25,66
Error in line 17: S522 A868 45,8
Error in line 24: aP6YzmPSy S997 62,1
Error in line 22: GWsyKf6 A367 65,8
Error in line 29: sOYU32bK A367 86,7
Error in line 56: 5cm9Lfo S522 84,9
Error in line 69: cnW A868 70,5
Error in line 66: 5cm9Lfo A367 90,4
Error in line 85: sOYU32bK A367 68,2
Error in line 78: cnW A367 366,3
Error in line 108: cnW A868 -1,3
Error in line 90: 5cm9Lfo S522 82,5
Error in line 122: HUORUUAJB S522 63,8
Error in line 125: GWsyKf6 S997 13,1
Error in line 127: HUORUUAJB S997 64,7
Error in line 136: HUORUUAJB A367 17,1
Error in line 145: GWsyKf6 S997 93,1
Error in line 155: S522 A367 -3,7
Error in line 152: aP6YzmPSy S522 94,7
Error in line 142: cnW A868 127,0
Error in line 171: 5cm9Lfo S522 418,2
Error in line 177: 5cm9Lfo S997 50,3
Error in line 174: sOYU32bK S522 4,1
Error in line 179: sOYU32bK S997 9,5
Error in line 176: S522 A367 27,1
Error in line 183: S522 S997 11,0
Error in line 186: S522 A367 93,2
Error in line 178: 5cm9Lfo A868 7,9
Error in line 192: sOYU32bK S522 3,2
Error in line 187: S522 A868 30,9
Error in line 203: sOYU32bK S997 13,0
Error in line 219: S522 A868 0,1
Error in line 227: S522 S522 23,9
Error in line 224: 5cm9Lfo A868 56,5
Error in line 233: aP6YzmPSy S997 32,7
Error in line 232: 5cm9Lfo A367 48,6
Error in line 250: HUORUUAJB A367 -1,3
